[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/GameScene/Map/Map01.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Multiplayer/gamestate.gd" type="Script" id=2]
[ext_resource path="res://Scenes/GameScene/Highscores.gd" type="Script" id=3]
[ext_resource path="res://Resources/Fonts/BleedingPixels.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Scenes/Multiplayer/GameOverGui.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 4 )

[node name="(Multi)World" type="Node2D"]
script = ExtResource( 2 )

[node name="Players" type="Node" parent="."]

[node name="Zombies" type="Node" parent="."]

[node name="ZombieSpawn" type="Node" parent="."]

[node name="Position2D" type="Position2D" parent="ZombieSpawn"]
position = Vector2( 254.632, -57.9403 )

[node name="Position2D2" type="Position2D" parent="ZombieSpawn"]
position = Vector2( -60.9897, 648.016 )

[node name="Position2D3" type="Position2D" parent="ZombieSpawn"]
position = Vector2( -77.762, 230.236 )

[node name="Position2D4" type="Position2D" parent="ZombieSpawn"]
position = Vector2( 1091.72, -50.3166 )

[node name="Position2D5" type="Position2D" parent="ZombieSpawn"]
position = Vector2( 1405.81, 323.246 )

[node name="Position2D6" type="Position2D" parent="ZombieSpawn"]
position = Vector2( 192.118, 840.134 )

[node name="Position2D7" type="Position2D" parent="ZombieSpawn"]
position = Vector2( 728.828, 829.461 )

[node name="Position2D8" type="Position2D" parent="ZombieSpawn"]
position = Vector2( 1404.29, 817.263 )

[node name="Position2D9" type="Position2D" parent="ZombieSpawn"]
position = Vector2( 695.283, -62.5145 )

[node name="Position2D10" type="Position2D" parent="ZombieSpawn"]
position = Vector2( -70.1382, -33.5444 )

[node name="Demons" type="Node" parent="."]

[node name="DemonSpawn" type="Node" parent="."]

[node name="Position2D" type="Position2D" parent="DemonSpawn"]
position = Vector2( 465.047, -53.366 )

[node name="Position2D2" type="Position2D" parent="DemonSpawn"]
position = Vector2( -72.6874, 440.8 )

[node name="Position2D3" type="Position2D" parent="DemonSpawn"]
position = Vector2( -57.7088, 825.147 )

[node name="Position2D4" type="Position2D" parent="DemonSpawn"]
position = Vector2( 1307.29, -62.0143 )

[node name="Position2D5" type="Position2D" parent="DemonSpawn"]
position = Vector2( 1417.51, 498.711 )

[node name="Position2D6" type="Position2D" parent="DemonSpawn"]
position = Vector2( 414.374, 846.818 )

[node name="Position2D7" type="Position2D" parent="DemonSpawn"]
position = Vector2( 934.373, 841.159 )

[node name="Position2D8" type="Position2D" parent="DemonSpawn"]
position = Vector2( 1192.06, 837.316 )

[node name="Position2D9" type="Position2D" parent="DemonSpawn"]
position = Vector2( 1408.84, 104.595 )

[node name="Position2D10" type="Position2D" parent="DemonSpawn"]
position = Vector2( 885.729, -61.953 )

[node name="Dead_player" type="Node" parent="."]

[node name="Navigation2D" type="Navigation2D" parent="." groups=[
"LevelNavigation",
]]

[node name="Map01" parent="Navigation2D" instance=ExtResource( 1 )]

[node name="PlayerSpawn1" type="Position2D" parent="."]
position = Vector2( 506.024, 397.52 )

[node name="PlayerSpawn2" type="Position2D" parent="."]
position = Vector2( 680.617, 399.493 )

[node name="Difficulty_spawn_timer" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[node name="GUI" type="CanvasLayer" parent="."]
layer = 0

[node name="ScoreContainer" type="MarginContainer" parent="GUI"]
anchor_left = 0.386
anchor_top = 0.005
anchor_right = 0.386
anchor_bottom = 0.005
margin_left = 100.952
margin_top = 8.16
margin_right = 242.952
margin_bottom = 77.16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="GUI/ScoreContainer"]
margin_top = 9.0
margin_right = 141.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 1 )
text = "30"
align = 1
script = ExtResource( 3 )

[node name="GameOverGui" parent="." instance=ExtResource( 9 )]

[connection signal="timeout" from="Difficulty_spawn_timer" to="." method="_on_Difficulty_spawn_timer_timeout"]
